welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but 'true' found.
	if(weekday==false  vacation==true ) {
                                     ^sleepIn:6: error: illegal start of simple expression
}
^